--- a/sequelize-docker-mysql.yaml
+++ b/sequelize-docker-mysql.yaml
@@ -2,6 +2,6 @@ dbname: userauth
 username: userauth
 password: userauth
 params:
-    host: localhost
-    port: 3306
-    dialect: mysql
+  host: db-userauth
+  port: 3306
+  dialect: mysql
