--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "User information database",
   "main": "user-server.mjs",
   "scripts": {
-    "start": "cross-env DEBUG=users:* PORT=5858 SEQUELIZE_CONNECT=sequelize-sqlite.yaml node ./user-server.mjs"
+    "start": "cross-env DEBUG=users:* PORT=5858 SEQUELIZE_CONNECT=sequelize-sqlite.yaml node ./user-server.mjs",
+    "on-server": "DEBUG=users:* REST_LISTEN=0.0.0.0 PORT=5858 SEQUELIZE_CONNECT=sequelize-mysql.yaml node ./user-server.mjs",
+    "docker-build": "docker build -t svc-userauth ."
   },
   "author": "David Herron <david@davidherron.com>",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "debug": "^4.1.1",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
+    "mysql2": "^2.3.3",
     "restify": "^8.5.1",
     "restify-clients": "^2.6.8",
     "sequelize": "^6.2.0",
